--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chalk": "^4.1.0",
     "config": "^3.3.2",
     "cors": "^2.8.5",
+    "crypto-random-string": "^3.3.1",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
