--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=development jest test.js --detectOpenHandles",
     "start": "nodemon local.js"
   },
   "repository": {
@@ -27,10 +27,12 @@
     "crypto-random-string": "^3.3.1",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.13",
     "nodemon": "^2.0.7",
-    "serverless": "^2.28.0"
+    "serverless": "^2.28.0",
+    "supertest": "^6.1.3"
   }
 }
